--- a/portfolio.html
+++ b/portfolio.html
@@ -25,10 +25,46 @@
             </nav>
         </div>
 
-    <main>
+    <main style="background-color: #000;">
 
         <div id="container-wrap">
         <div id="container">
+            <h1 class="portfolio">built to inform,<br>styled to last</h1>
+            <div id="portfolio">
+                <div class="featured-intro">Featured Projects</div>
+                <div id="featured-wrap">
+                    <div class="img-container">
+                        <img src="./images/design/ai-reference-guide.jpg">
+                        <div class="caption">AI Reference Guide</div>
+                    </div>
+                    <div class="img-container">
+                        <a href="./downloads/NASA-Libraries_FA22.pdf" target="_blank" title="Download"><img src="./images/design/promo2_NLN-FA22_2.jpg"></a>
+                        <div class="caption">NASA Libraries, Fall 2022</div>
+                    </div>
+                    <div class="img-container">
+                         <a href="./downloads/DIGITAL_2024-25_library-brochure.pdf" target="_blank" title="Download"><img src="./images/design/brochure_2023-24_2.jpg"></a>
+                        <div class="caption">Tri-Fold Brochure</div>
+                    </div>
+                    <div class="img-container">
+                        <img style="object-position: 0 -634px; scale: 185%;" src="./images/design/nasa-library-welcome-email-mockup.png">
+                        <div class="caption">Welcome Email</div>
+                    </div>
+                    <div class="img-container">
+                        <img src="./images/design/larc-library-website.png">
+                        <div class="caption">Library Website</div>
+                    </div>
+                    <div class="img-container">
+                        <a href="./downloads/1936_snapshots-of-the-past.pdf" target="_blank" title="Download"><img src="./images/design/snapshots.jpg"></a>
+                        <div class="caption">Special Projects</div>
+                    </div>
+                    <div class="img-container">
+                        <a href="./downloads/ill-thank-you-card.pdf" target="_blank" title="Download"><img src="./images/design/ill-thank-you-card.jpg"></a>
+                        <div class="caption">ILL Thank You Card</div>
+                    </div>
+                    
+                </div>
+            </div>
+        
 
         </div>
         </div>
