--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,11 @@
 
         <div id="container-wrap">
         <div id="container">
-            <h1 class="portfolio">built to inform,<br>styled to last</h1>
+            <div id="logo-large">
+                <svg id="logo-mp-large" xmlns="http://www.w3.org/2000/svg" width="300" height="275.64" viewBox="0 0 300 275.64"><g id="c"><polygon class="m" points="247.72 0 247.72 163.07 150.55 219.21 89.11 184.16 89.11 254.55 52.87 275.64 52.87 122.38 150.04 177.62 211.49 142.28 211.49 62.38 150.1 97.29 52.87 41.29 52.87 0 150.5 55.71 247.72 0"/><polygon class="p" points="194.85 91.49 194.85 133.07 150.1 158.52 36.24 93.27 36.24 275.64 0 254.55 0 30.89 149.69 116.79 194.85 91.49"/><polygon class="p" points="300 30.89 300 255.45 264.36 275.64 264.36 51.39 300 30.89"/><path class="p" d="M247.72,182.97v92.67c-12.09-6.93-24.51-13.55-36.14-21.19l-.14-50.42,36.28-21.06Z"/></g></svg>
+            </div>
+            <h1 class="portfolio">built to inform<br>styled to last</h1>
+            
             <div id="portfolio">
                 <div class="featured-intro">Featured Projects</div>
                 <div id="featured-wrap">
@@ -69,7 +73,7 @@
         </div>
         </div>
     </main>
-    <footer>
+    <footer style="border-top: 1px solid rgba(25,25,25,1.0);">
         <div>
             <p><svg id="logo-mp" xmlns="http://www.w3.org/2000/svg" width="300" height="275.64" viewBox="0 0 300 275.64"><g id="c"><polygon class="m" points="247.72 0 247.72 163.07 150.55 219.21 89.11 184.16 89.11 254.55 52.87 275.64 52.87 122.38 150.04 177.62 211.49 142.28 211.49 62.38 150.1 97.29 52.87 41.29 52.87 0 150.5 55.71 247.72 0"/><polygon class="p" points="194.85 91.49 194.85 133.07 150.1 158.52 36.24 93.27 36.24 275.64 0 254.55 0 30.89 149.69 116.79 194.85 91.49"/><polygon class="p" points="300 30.89 300 255.45 264.36 275.64 264.36 51.39 300 30.89"/><path class="p" d="M247.72,182.97v92.67c-12.09-6.93-24.51-13.55-36.14-21.19l-.14-50.42,36.28-21.06Z"/></g></svg></p>
             <p style="margin: 5px 0px;">© 2025 Michael Pritz</p>
