--- a/portfolio.html
+++ b/portfolio.html
@@ -38,45 +38,43 @@
                 <div class="featured-intro">Featured Projects</div>
                 <div id="featured-wrap">
                     <div class="img-container">
-                        <img src="./images/design/ai-reference-guide.jpg">
+                        <a href="./images/design/full-scale/full_libguide_ai-reference-guide.webp" target="_blank"><img src="./images/design/thumbnail/thumb_libguide_ai-reference-guide.webp"></a>
                         <div class="caption">AI LibGuide</div>
                     </div>
                     <div class="img-container">
-                        <a href="./downloads/NASA-Libraries_FA22.pdf" target="_blank" title="Download"><img src="./images/design/promo2_NLN-FA22_2.jpg"></a>
+                        <a href="./downloads/NASA-Libraries_FA22.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_magazine_FA22.webp"></a>
                         <div class="caption">Magazine</div>
                     </div>
                     <div class="img-container">
-                        <a href="./images/design/Alps-Mockup.png" target="_blank" title="Download"><img src="./images/design/Alps-Mockup.png"></a>
+                        <a href="./images/design/full-scale/full_website_nasa-library.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_website_nasa-library.webp"></a>
                         <div class="caption">Website</div>
                     </div>
                     <div class="img-container">
-                        <a href="./downloads/Langley-Researcher_July-1969_Apollo.pdf" target="_blank" title="Download"><img src="./images/design/promo_bulletins-scoops-researchers.jpg"></a>
+                        <a href="./downloads/Langley-Researcher_July-1969_Apollo.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_replica_langley-researcher.webp"></a>
                         <div class="caption">Legacy Replica</div>
                     </div>
                     <div class="img-container" style="background: linear-gradient(135deg, #005a9e 0%, #0066b3 40%, #007fc1 70%, #0090d0 100%);">
-                         <a href="./downloads/DIGITAL_2024-25_library-brochure.pdf" target="_blank" title="Download"><img src="./images/design/brochure_2023-24_1.png"></a>
+                         <a href="./downloads/DIGITAL_2024-25_library-brochure.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_brochure_langley-library.webp"></a>
                         <div class="caption">Brochure</div>
                     </div>
                     <div class="img-container">
-                        <a href="./images/design/BloomsburyGroup1.png" target="_blank" title="Download"><img src="./images/design/BloomsburyGroup1.png"></a>
+                        <a href="./images/design/full-scale/full_display_bloomsbury-group.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_display_bloomsbury-group.webp"></a>
                         <div class="caption">Book Display</div>
                     </div>
                     <div class="img-container">
-                        <a href="./downloads/NASA-Welcome-Email-Mockup_2025.pdf" target="_blank" title="Download"><img style="object-position: 0 -634px; scale: 185%;" src="./images/design/nasa-library-welcome-email-mockup.png"></a>
+                        <a href="./images/design/full-scale/full_email_welcome.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_email_welcome.webp"></a>
                         <div class="caption">Welcome Email</div>
                     </div>
-                    
-                    
                     <div class="img-container">
-                        <a href="./downloads/1936_snapshots-of-the-past.pdf" target="_blank" title="Download"><img src="./images/design/snapshots.jpg"></a>
+                        <a href="./downloads/snapshots-of-the-past_1936.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_feature_snapshots-of-the-past.webp"></a>
                         <div class="caption">Archival Storytelling</div>
                     </div>
                     <div class="img-container">
-                        <img src="./images/design/promo-nasa-galaxie.jpg">
+                        <a href="/images/design/full-scale/full_ils_nasa-galaxie.webp" target="_blank"><img src="./images/design/thumbnail/thumb_ils_nasa-galaxie.webp"></a>
                         <div class="caption">ILS UI</div>
                     </div>
                     <div class="img-container">
-                        <a href="./images/design/larc-library-website.png" target="_blank" title="Download"><img src="./images/design/larc-library-website.png"></a>
+                        <a href="./images/design/full-scale/full_website_nasa-langley-library.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_website_nasa-langley-library.webp"></a>
                         <div class="caption">Website</div>
                     </div>
                     <div class="img-container">
