--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
     </head>
 
-    <body>
+    <body id="portfolio-background">
        
         <header class="site-header">
             <div id="logo" aria-hidden="true">
@@ -25,7 +25,7 @@
             </nav>
         </div>
 
-    <main style="background-color: #000;">
+    <main>
 
         <div id="container-wrap">
         <div id="container">
