--- a/portfolio.html
+++ b/portfolio.html
@@ -16,14 +16,13 @@
             <div id="logo" aria-hidden="true">
                 <svg id="logo-mp" xmlns="http://www.w3.org/2000/svg" width="300" height="275.64" viewBox="0 0 300 275.64"><g id="c"><polygon class="m" points="247.72 0 247.72 163.07 150.55 219.21 89.11 184.16 89.11 254.55 52.87 275.64 52.87 122.38 150.04 177.62 211.49 142.28 211.49 62.38 150.1 97.29 52.87 41.29 52.87 0 150.5 55.71 247.72 0"/><polygon class="p" points="194.85 91.49 194.85 133.07 150.1 158.52 36.24 93.27 36.24 275.64 0 254.55 0 30.89 149.69 116.79 194.85 91.49"/><polygon class="p" points="300 30.89 300 255.45 264.36 275.64 264.36 51.39 300 30.89"/><path class="p" d="M247.72,182.97v92.67c-12.09-6.93-24.51-13.55-36.14-21.19l-.14-50.42,36.28-21.06Z"/></g></svg>
             </div>
-        </header>
-        <div class="sticky-nav">
             <nav class="nav-center" role="navigation" aria-label="Primary">
                 <a class="left" href="https://www.michaelpritz.info/">résumé</a>
                 <a class="middle" href="https://www.michaelpritz.info/portfolio">portfolio</a>
                 <a class="right" href="https://www.michaelpritz.info/references">references</a>
             </nav>
-        </div>
+        </header>
+        
 
     <main>
 
@@ -40,51 +39,51 @@
                     <div class="featured-intro">Designed by Michael Pritz</div>
                 </div>
                 <div id="featured-wrap">
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./downloads/NASA-Libraries_FA22.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_magazine_FA22.webp"></a>
                         <div class="caption">Magazine</div>
                     </div>
-                    <div class="img-container" style="background: linear-gradient(135deg, #005a9e 0%, #0066b3 40%, #007fc1 70%, #0090d0 100%);">
+                    <div class="img-container animate" style="background: linear-gradient(135deg, #005a9e 0%, #0066b3 40%, #007fc1 70%, #0090d0 100%);">
                          <a href="./downloads/Langley-Library-Brochure_2024-25.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_brochure_langley-library.webp"></a>
                         <div class="caption">Brochure</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./downloads/NASA-Libraries_FA21.pdf" target="_blank"><img src="./images/design/thumbnail/thumb_magazine_FA21.webp"></a>
                         <div class="caption">Comic Book</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./downloads/Langley-Researcher_July-1969_Apollo.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_replica_langley-researcher.webp"></a>
                         <div class="caption">Legacy Replica</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./images/design/full-scale/full_libguide_ai-reference-guide.webp" target="_blank"><img src="./images/design/thumbnail/thumb_libguide_ai-reference-guide.webp"></a>
                         <div class="caption">LibGuide</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./downloads/snapshots-of-the-past_1936.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_feature_snapshots-of-the-past.webp"></a>
                         <div class="caption">Archival Storytelling</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./images/design/full-scale/full_website_nasa-library.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_website_nasa-library.webp"></a>
                         <div class="caption">Website</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./downloads/NASA-Langley-Library_W19.pdf" target="_blank"><img src="./images/design/thumbnail/thumb_magazine_W19.webp"></a>
                         <div class="caption">Magazine</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./images/design/full-scale/full_website_nasa-langley-library.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_website_nasa-langley-library.webp"></a>
                         <div class="caption">Website</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./images/design/full-scale/full_website_libanswers.webp" target="_blank"><img src="./images/design/thumbnail/thumb_website-libanswers.webp"></a>
                         <div class="caption">Website</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./images/design/full-scale/full_display_bloomsbury-group.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_display_bloomsbury-group.webp"></a>
                         <div class="caption">Book Display</div>
                     </div>
-                    <div class="img-container">
+                    <div class="img-container animate">
                         <a href="./images/design/full-scale/full_email_welcome.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_email_welcome.webp"></a>
                         <div class="caption">Welcome Email</div>
                     </div>
@@ -95,7 +94,7 @@
         </div>
         </div>
     </main>
-    <footer style="border-top: 1px solid rgba(25,25,25,1.0);">
+    <footer>
         <div>
             <p><svg id="logo-mp" xmlns="http://www.w3.org/2000/svg" width="300" height="275.64" viewBox="0 0 300 275.64"><g id="c"><polygon class="m" points="247.72 0 247.72 163.07 150.55 219.21 89.11 184.16 89.11 254.55 52.87 275.64 52.87 122.38 150.04 177.62 211.49 142.28 211.49 62.38 150.1 97.29 52.87 41.29 52.87 0 150.5 55.71 247.72 0"/><polygon class="p" points="194.85 91.49 194.85 133.07 150.1 158.52 36.24 93.27 36.24 275.64 0 254.55 0 30.89 149.69 116.79 194.85 91.49"/><polygon class="p" points="300 30.89 300 255.45 264.36 275.64 264.36 51.39 300 30.89"/><path class="p" d="M247.72,182.97v92.67c-12.09-6.93-24.51-13.55-36.14-21.19l-.14-50.42,36.28-21.06Z"/></g></svg></p>
             <p style="margin: 5px 0px;">© 2025 Michael Pritz</p>
