--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                         <div class="caption">Legacy Replica</div>
                     </div>
                     <div class="img-container animate">
-                        <a href="./images/design/full-scale/full_libguide_ai-reference-guide.webp" target="_blank"><img src="./images/design/thumbnail/thumb_libguide_ai-reference-guide.webp"></a>
+                        <a href="https://www.michaelpritz.info/portfolio/ai"><img src="./images/design/thumbnail/thumb_libguide_ai-reference-guide.webp"></a>
                         <div class="caption">LibGuide</div>
                     </div>
                     <div class="img-container animate">
