--- a/references.html
+++ b/references.html
@@ -34,6 +34,7 @@
                     <div class="col-1 animate">
                         <div class="name">Name</div>
                         <div class="agency">Agency</div>
+                        <div class="center">Center</div>
                         <div class="title">Title</div>
                         <div class="email">Email</div>
                         <div class="phone">Phone</div>
@@ -41,7 +42,8 @@
                     <div class="col-2 animate">
                         <div class="name">Robin M. Dixon</div>
                         <div class="agency">NASA</div>
-                        <div class="title">Supervisory Librarian</div>
+                        <div class="center">Goddard Space Flight Center</div>
+                        <div class="title">Chief Librarian</div>
                         <div class="email"><a href="mailto:robindxflutist@gmail.com">robindxflutist@gmail.com</a></div>
                         <div class="phone">301.602.8146</div>
                     </div>
@@ -51,6 +53,7 @@
                     <div class="col-1 animate">
                         <div class="name">Name</div>
                         <div class="agency">Agency</div>
+                        <div class="center">Center</div>
                         <div class="title">Title</div>
                         <div class="email">Email</div>
                         <div class="phone">Phone</div>
@@ -58,7 +61,8 @@
                     <div class="col-2 animate">
                         <div class="name">Patrick A. Healey</div>
                         <div class="agency">NASA</div>
-                        <div class="title">I.T. Librarian</div>
+                        <div class="center">Goddard Space Flight Center</div>
+                        <div class="title">Librarian / I.T. Lead</div>
                         <div class="email"><a href="mailto:patrick_a_healey@outlook.com">patrick_a_healey@outlook.com</a></div>
                         <div class="phone">304.433.7401</div>
                     </div>
@@ -68,6 +72,7 @@
                     <div class="col-1 animate">
                         <div class="name">Name</div>
                         <div class="agency">Agency</div>
+                        <div class="center">Center</div>
                         <div class="title">Title</div>
                         <div class="email">Email</div>
                         <div class="phone">Phone</div>
@@ -75,7 +80,8 @@
                     <div class="col-2 animate">
                         <div class="name">Kathryn Dunlap</div>
                         <div class="agency">NASA</div>
-                        <div class="title">Librarian, Subscriptions Lead</div>
+                        <div class="center">Glenn Research Center</div>
+                        <div class="title">Librarian / Subscriptions Lead</div>
                         <div class="email"><a href="mailto:kmdunlap121@gmail.com">kmdunlap121@gmail.com</a></div>
                         <div class="phone">716.997.6943</div>
                     </div>
@@ -85,6 +91,7 @@
                     <div class="col-1 animate">
                         <div class="name">Name</div>
                         <div class="agency">Agency</div>
+                        <div class="center">Center</div>
                         <div class="title">Title</div>
                         <div class="email">Email</div>
                         <div class="phone">Phone</div>
@@ -92,6 +99,7 @@
                     <div class="col-2 animate">
                         <div class="name">Robin Unger</div>
                         <div class="agency">NASA</div>
+                        <div class="center">Glenn Research Center</div>
                         <div class="title">Librarian</div>
                         <div class="email"><a href="mailto:robinpertz@gmail.com">robinpertz@gmail.com</a></div>
                         <div class="phone">440.796.2503</div>
@@ -102,6 +110,7 @@
                     <div class="col-1 animate">
                         <div class="name">Name</div>
                         <div class="agency">Agency</div>
+                        <div class="center">Center</div>
                         <div class="title">Title</div>
                         <div class="email">Email</div>
                         <div class="phone">Phone</div>
@@ -109,6 +118,7 @@
                     <div class="col-2 animate">
                         <div class="name">Jordan Rasmussen</div>
                         <div class="agency">NASA</div>
+                        <div class="center">Langley Research Center</div>
                         <div class="title">Technical Manager</div>
                         <div class="email"><a href="mailto:hormeljl@gmail.com">hormeljl@gmail.com</a></div>
                         <div class="phone">540.765.7599</div>
