--- a/portfolio.html
+++ b/portfolio.html
@@ -39,11 +39,11 @@
                 </div>
                 <div id="featured-wrap">
                     <div class="img-container animate">
-                        <a href="./downloads/NASA-Libraries_FA22.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_magazine_FA22.webp"></a>
+                        <a href="./downloads/NASA-Libraries_FA22.pdf" target="_blank"><img src="./images/design/thumbnail/thumb_magazine_FA22.webp"></a>
                         <div class="caption">Magazine</div>
                     </div>
                     <div class="img-container animate" style="background: linear-gradient(135deg, #005a9e 0%, #0066b3 40%, #007fc1 70%, #0090d0 100%);">
-                         <a href="./downloads/Langley-Library-Brochure_2024-25.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_brochure_langley-library.webp"></a>
+                         <a href="./downloads/Langley-Library-Brochure_2024-25.pdf" target="_blank"><img src="./images/design/thumbnail/thumb_brochure_langley-library.webp"></a>
                         <div class="caption">Brochure</div>
                     </div>
                     <div class="img-container animate">
@@ -51,7 +51,7 @@
                         <div class="caption">Comic Book</div>
                     </div>
                     <div class="img-container animate">
-                        <a href="./downloads/Langley-Researcher_July-1969_Apollo.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_replica_langley-researcher.webp"></a>
+                        <a href="./downloads/Langley-Researcher_July-1969_Apollo.pdf" target="_blank"><img src="./images/design/thumbnail/thumb_replica_langley-researcher.webp"></a>
                         <div class="caption">Legacy Replica</div>
                     </div>
                     <div class="img-container animate">
@@ -59,11 +59,11 @@
                         <div class="caption">LibGuide</div>
                     </div>
                     <div class="img-container animate">
-                        <a href="./downloads/snapshots-of-the-past_1936.pdf" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_feature_snapshots-of-the-past.webp"></a>
+                        <a href="./downloads/snapshots-of-the-past_1936.pdf" target="_blank"><img src="./images/design/thumbnail/thumb_feature_snapshots-of-the-past.webp"></a>
                         <div class="caption">Archival Storytelling</div>
                     </div>
                     <div class="img-container animate">
-                        <a href="./images/design/full-scale/full_website_nasa-library.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_website_nasa-library.webp"></a>
+                        <a href="./images/design/full-scale/full_website_nasa-library.webp" target="_blank"><img src="./images/design/thumbnail/thumb_website_nasa-library.webp"></a>
                         <div class="caption">Website</div>
                     </div>
                     <div class="img-container animate">
@@ -71,7 +71,7 @@
                         <div class="caption">Magazine</div>
                     </div>
                     <div class="img-container animate">
-                        <a href="./images/design/full-scale/full_website_nasa-langley-library.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_website_nasa-langley-library.webp"></a>
+                        <a href="./images/design/full-scale/full_website_nasa-langley-library.webp" target="_blank"><img src="./images/design/thumbnail/thumb_website_nasa-langley-library.webp"></a>
                         <div class="caption">Website</div>
                     </div>
                     <div class="img-container animate">
@@ -79,11 +79,11 @@
                         <div class="caption">Website</div>
                     </div>
                     <div class="img-container animate">
-                        <a href="./images/design/full-scale/full_display_bloomsbury-group.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_display_bloomsbury-group.webp"></a>
+                        <a href="./images/design/full-scale/full_display_bloomsbury-group.webp" target="_blank"><img src="./images/design/thumbnail/thumb_display_bloomsbury-group.webp"></a>
                         <div class="caption">Book Display</div>
                     </div>
                     <div class="img-container animate">
-                        <a href="./images/design/full-scale/full_email_welcome.webp" target="_blank" title="Download"><img src="./images/design/thumbnail/thumb_email_welcome.webp"></a>
+                        <a href="./images/design/full-scale/full_email_welcome.webp" target="_blank"><img src="./images/design/thumbnail/thumb_email_welcome.webp"></a>
                         <div class="caption">Welcome Email</div>
                     </div>
                 </div>
