--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="https://use.typekit.net/ffe8zgm.css">
 		<link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
 
     <body id="portfolio-background">
