--- a/index.html
+++ b/index.html
@@ -209,13 +209,15 @@
                             <div class="col-2"><p>2018-2026</p><p>Hampton, VA</p></div>
                         </div>
                         <div class="job-description">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                            <p>Systems and applications lead for NASA Libraries and local Library lead at Langley Research Center for web, subscriptions, and circulation.</p>
                         </div>
                         <div class="job-description">
                             <ul>
-                                <li>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</li>
-                                <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
-                                <li>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+                                <li>Led a multi-year effort to move from ten largely independent center libraries to a unified “one NASA library” with shared systems, policies, and services and a single web entry point.</li>
+                                <li>Analyzed overlapping systems and contracts, designed a simplified applications stack, and enabled retirement of redundant platforms, reducing projected annual costs by about $1.7M.</li>
+                                <li>Served as primary point of contact with Ex Libris, SirsiDynix, OCLC, Springshare, and OpenAthens, coordinating requirements, configurations, demos, and issue escalation across centers.</li>
+                                <li>Administered NASA's SirsiDynix Symphony ILS and ILLiad interlibrary loan tool and led agency-wide working groups to standardize practices across centers.</li>
+                                <li>Designed and edited the NASA Library's biannual magazine, planning themes, coordinating contributors, and producing print and digital issues for agency-wide distribution.</li>
                             </ul>
                         </div>
                     </div>
