--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             <div class="col-2"><p>2018-2026</p><p>Hampton, VA</p></div>
                         </div>
                         <div class="job-description">
-                            <p>Systems and applications lead for NASA Libraries and local Library lead at Langley Research Center for web, subscriptions, and circulation.</p>
+                            <p>Library systems and applications lead for NASA Libraries and local lead at Langley Research Center for web, subscriptions, and circulation.</p>
                         </div>
                         <div class="job-description">
                             <ul>
