--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 <li>Analyzed overlapping systems and contracts, designed a simplified applications stack, and enabled retirement of redundant platforms, reducing projected annual costs by about $1.7M.</li>
                                 <li>Served as primary point of contact with Ex Libris, SirsiDynix, OCLC, Springshare, and OpenAthens, coordinating requirements, configurations, demos, and issue escalation across centers.</li>
                                 <li>Administered NASA's SirsiDynix Symphony ILS and ILLiad interlibrary loan tool and led agency-wide working groups to standardize practices across centers.</li>
-                                <li>Designed and edited the NASA Library's biannual magazine, planning themes, coordinating contributors, and producing print and digital issues for agency-wide distribution.</li>
+                                <li>Designed and edited the NASA Library's biannual magazine, planning themes, coordinating contributors, conducting interviews, and producing print and digital issues for agency-wide distribution.</li>
                             </ul>
                         </div>
                     </div>
