--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                             <ul>
                                 <li>Led a multi-year effort to move from ten largely independent center libraries to a unified “one NASA library” with shared systems, policies, and services and a single web entry point.</li>
                                 <li>Analyzed overlapping systems and contracts, designed a simplified applications stack, and enabled retirement of redundant platforms, reducing projected annual costs by about $1.7M.</li>
+                                <li>Administered NASA's SirsiDynix Symphony ILS, ILLiad, and Springshare LibAnswers/LibGuides platforms and led agency-wide working groups to standardize policies and workflows across centers.</li>
                                 <li>Served as primary point of contact with Ex Libris, SirsiDynix, OCLC, Springshare, and OpenAthens, coordinating requirements, configurations, demos, and issue escalation across centers.</li>
-                                <li>Administered NASA's SirsiDynix Symphony ILS and ILLiad interlibrary loan tool and led agency-wide working groups to standardize practices across centers.</li>
-                                <li>Designed and edited the NASA Library's biannual magazine, planning themes, coordinating contributors, conducting interviews, and producing print and digital issues for agency-wide distribution.</li>
+                                <li>Designed and edited NASA Libraries’ biannual magazine, planning themes, coordinating contributors, conducting interviews, and producing print and digital issues for agency-wide distribution.</li>
                             </ul>
                         </div>
                     </div>
@@ -238,13 +238,9 @@
                             <div class="col-2"><p>2017-2018</p><p>Chicago, IL</p></div>
                         </div>
                         <div class="job-description">
-                            <p>Supported circulation desk operations, assisting patrons with transactions, item searches, and basic reference services while ensuring smooth coverage and building access.</p>
-                        </div>
-                        <div class="job-description">
                             <ul>
-                                <li>Supervised student workers during assigned shifts, providing guidance and ensuring consistent service delivery.</li>
-                                <li>Managed weekend opening and closing procedures, addressing building access and security needs.</li>
-                                <li>Completed Alma Administration Certification, strengthening technical knowledge of library systems.</li>
+                                <li>Supported circulation desk operations, assisting patrons with transactions and basic reference services.</li>
+                                <li>Managed weekend operations, supervising student workers, and opening and closing the library.</li>
                             </ul>
                         </div>
                     </div>
@@ -266,13 +262,10 @@
                             <div class="col-2"><p>2016-2018</p><p>Chicago, IL</p></div>
                         </div>
                         <div class="job-description">
-                            <p>Provided reference and information services for Northwestern’s Kellogg School of Management, School of Professional Studies, and the Osher Lifelong Learning Institute, supporting graduate students, professional learners, and lifelong learning participants while also serving Chicago’s broader public community.</p>
-                        </div>
-                        <div class="job-description">
                             <ul>
+                                <li>Provided reference and information services for the Kellogg School of Management, School of Professional Studies, and the Osher Lifelong Learning Institute.</li>
                                 <li>Guided patrons in using the catalog and 900+ databases to access scholarly and professional resources.</li>
-                                <li>Delivered in-person and online instruction, strengthening research skills across academic and lifelong learning.</li>
-                                <li>Supported computer lab use for enrolled patrons and visitors, assisting with internet access and troubleshooting.</li>
+                                <li>Delivered in-person and online instruction and supported computer lab use, assisting with internet access, troubleshooting, and research skills development.</li>
                             </ul>
                         </div>
                     </div>
@@ -293,13 +286,9 @@
                             <div class="col-2"><p>2016-2018</p><p>Chicago, IL</p></div>
                         </div>
                         <div class="job-description">
-                            <p>Facilitated public access to digital fabrication tools, teaching design software and equipment use in the library’s Maker Lab while fostering community engagement and creative skill development.</p>
-                        </div>
-                        <div class="job-description">
                             <ul>
-                                <li>Conducted workshops on 3D printing, laser cutting, and CNC routing for community members.</li>
-                                <li>Delivered instruction in open-source design software, enabling patrons to create and prototype projects.</li>
-                                <li>Maintained lab equipment and provided tours, ensuring safe and welcoming maker space access.</li>
+                                <li>Conducted workshops and instruction in open-source design software, 3D printing, laser cutting, and CNC routing, enabling community members to create and prototype projects.</li>
+                                <li>Maintained lab equipment, provided tours, and facilitated public access to digital fabrication tools in the Maker Lab, ensuring safe, welcoming access while fostering community engagement and creative skill development.</li>
                             </ul>
                         </div>
                     </div>
@@ -356,12 +345,9 @@
                             <div class="col-2"><p>2006-2012</p><p>Chicago, IL</p></div>
                         </div>
                         <div class="job-description">
-                            <p>Managed technology systems and equipment for military operations, supporting secure communications and information networks during deployment.</p>
-                        </div>
-                        <div class="job-description">
                             <ul>
-                                <li>Developed Excel-based inventory system tracking $3M+ in Department of Defense technology assets.</li>
-                                <li>Integrated multiple information systems into cohesive network environments, enhancing operational efficiency.</li>
+                                <li>Managed technology systems and equipment for military operations, supporting secure communications and information networks during deployment.</li>
+                                <li>Developed an Excel-based inventory system tracking $3M+ in Department of Defense technology assets.</li>
                                 <li>Resolved 1,000+ customer system issues in support of Operation Iraqi Freedom missions.</li>
                             </ul>
                         </div>
